--- a/pom.xml
+++ b/pom.xml
@@ -14,21 +14,26 @@
 	<dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
 	    <artifactId>jackson-annotations</artifactId>
-	    <version>2.12.2</version>
+	    <version>2.11.3</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
 	    <artifactId>jackson-databind</artifactId>
-	    <version>2.12.2</version>
+	    <version>2.11.3</version>
 	</dependency>
 	
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-core</artifactId>
+	    <version>2.11.3</version>
+	</dependency>
+		
 	<dependency>
 	    <groupId>commons-lang</groupId>
 	    <artifactId>commons-lang</artifactId>
 	    <version>2.2</version>
 	</dependency>
-	
 	
   </dependencies>
   
