--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
 	    <version>2.2</version>
 	</dependency>
 	
+	<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
+	<dependency>
+	    <groupId>com.oracle.database.jdbc</groupId>
+	    <artifactId>ojdbc8</artifactId>
+	    <version>21.1.0.0</version>
+	</dependency>
+		
+	
   </dependencies>
   
 	  
