--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 	      <configuration>
 	        <archive>
 	          <manifest>
-	            <mainClass>fully.qualified.MainClass</mainClass>
+	            <mainClass>window.MainWindow</mainClass>
 	          </manifest>
 	        </archive>
 	        <descriptorRefs>
